<resources>
    <string name="app_name">ChatClient</string>
    <string name="btnStart">接続</string>
    <string name="btnStop">切断</string>
    <string name="btnSend">送信</string>
    <string name="serverAddress">192.168.241.100</string>
    <string name="serverAddressText">ServerAddress</string>
    <string name="serverPort">55555</string>
    <string name="serverPortText">ServerPort</string>
    <string name="name">TestName</string>
    <string name="nameText">Name</string>
    <string name="sendMassageHint">Message</string>
</resources>